plugins {
	id 'java'
	id 'org.springframework.boot' version '3.4.5'
	id 'io.spring.dependency-management' version '1.1.7'
}

group = 'yeonjae'
version = '0.0.1-SNAPSHOT'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(17)
	}
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'org.springframework.boot:spring-boot-starter-security'
	// implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
	implementation 'org.springframework.boot:spring-boot-starter-validation'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	// implementation 'org.thymeleaf.extras:thymeleaf-extras-springsecurity6'

	// 추가
	implementation 'com.github.gavlyukovskiy:p6spy-spring-boot-starter:1.9.0'


	compileOnly 'org.projectlombok:lombok'
	runtimeOnly 'com.h2database:h2'
	annotationProcessor 'org.projectlombok:lombok'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	 testImplementation 'org.springframework.security:spring-security-test'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
	testImplementation 'org.mockito:mockito-inline:5.2.0' // static 메서드 mocking용

	// for handel metadata
	implementation 'com.drewnoakes:metadata-extractor:2.18.0'

	// 추가, test 롬복 사용
	testCompileOnly 'org.projectlombok:lombok'
	testAnnotationProcessor 'org.projectlombok:lombok'

	// google maps api 용
	implementation 'org.springframework.boot:spring-boot-starter-webflux'

	//security
	implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
	implementation 'org.springframework.boot:spring-boot-starter-oauth2-resource-server'

	//jwt
	implementation 'io.jsonwebtoken:jjwt-api:0.12.5'
	implementation 'io.jsonwebtoken:jjwt-impl:0.12.5'
	implementation 'io.jsonwebtoken:jjwt-jackson:0.12.5'

	//swagger
	implementation('org.springdoc:springdoc-openapi-starter-webmvc-ui:2.3.0')

	// redis
	implementation 'org.springframework.boot:spring-boot-starter-data-redis'

	// oauth2.0
	implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'

	// Querydsl 추가
	implementation 'com.querydsl:querydsl-jpa:5.0.0:jakarta'
	annotationProcessor "com.querydsl:querydsl-apt:${dependencyManagement.importedProperties['querydsl.version']}:jakarta"
	annotationProcessor "jakarta.annotation:jakarta.annotation-api"
	annotationProcessor "jakarta.persistence:jakarta.persistence-api"

	// HEIC -> JPEG 변환용
	implementation 'org.im4java:im4java:1.4.0'

	// openCSV (오픈 데이터 가져온거 처리)
	implementation("com.opencsv:opencsv:5.9")
	implementation("com.fasterxml.jackson.core:jackson-databind")

	// aop
	implementation 'org.springframework.boot:spring-boot-starter-aop'

	//postgreSQL
	runtimeOnly 'org.postgresql:postgresql'
}

tasks.named('test') {
	useJUnitPlatform()
}
